--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,14 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
         "@radix-ui/react-alert-dialog": "^1.1.14",
+        "@radix-ui/react-dialog": "^1.1.14",
         "@radix-ui/react-label": "^2.1.7",
         "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-toast": "^1.2.14",
         "@tanstack/react-query": "^5.24.1",
         "axios": "^1.6.7",
+        "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "jspdf": "^3.0.1",
         "lucide-react": "^0.514.0",
