--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,15 +34,12 @@ services:
         build:
             context: ./backend
             dockerfile: Dockerfile
-        restart: unless-stopped
-        environment:
-            NODE_ENV: production
-            PORT: 3000
-            DATABASE_URL: mysql://copro:change_me@db:3306/coprodb
+        env_file:
+            - ./backend/.env
         depends_on:
             - db
         ports:
-            - "3000:3000"
+            - "3001:3000" 
         networks:
             - appnet
 
@@ -53,7 +50,7 @@ services:
         restart: unless-stopped
         environment:
             NODE_ENV: production
-            VITE_API_URL: http://your-server-domain-or-ip:3000
+            VITE_API_URL: http://localhost:3000
         depends_on:
             - backend
         ports:
