--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.8"
+
 services:
     db:
         image: mysql:8.0
@@ -48,8 +50,8 @@ services:
         restart: unless-stopped
         depends_on:
             - backend
-        ports:
-            - "8081:80"
+        expose:
+            - "80"
         networks:
             - appnet
 
