--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
     db:
         image: mysql:8.0
+        container_name: copromanager-db
         restart: unless-stopped
         environment:
             MYSQL_ROOT_PASSWORD: change_me_root
@@ -9,43 +10,45 @@ services:
             MYSQL_PASSWORD: change_me
         volumes:
             - db-data:/var/lib/mysql
-        ports:
-            - "3306:3306"
+        expose:
+            - "3306"
         command: --default-authentication-plugin=mysql_native_password
         networks:
             - appnet
 
     phpmyadmin:
         image: phpmyadmin/phpmyadmin:latest
+        container_name: copromanager-phpmyadmin
         restart: unless-stopped
         environment:
             PMA_HOST: db
             PMA_PORT: 3306
-        ports:
-            - "8080:80"
+        expose:
+            - "80"
         depends_on:
             - db
         networks:
             - appnet
 
     backend:
-        build:
-            context: ./backend
-            dockerfile: Dockerfile
+        image: axelfertinel/copro-backend:latest
+        container_name: copromanager-backend
+        restart: unless-stopped
         env_file:
             - ./backend/.env
         depends_on:
             - db
-        ports:
-            - "3001:3000"
+        expose:
+            - "3000"
         networks:
             - appnet
 
     frontend:
-        build:
-            context: ./frontend
-            dockerfile: Dockerfile
+        image: axelfertinel/copro-frontend:latest
+        container_name: copromanager-frontend
         restart: unless-stopped
+        environment:
+            NODE_ENV: production
         depends_on:
             - backend
         expose:
