--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,6 +14,16 @@ server {
         add_header Cache-Control "public, immutable";
     }
 
+    # Proxy vers le backend pour les requêtes API
+    location /api/ {
+        proxy_pass http://backend:3000/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     # Toutes les routes SPA redirigent vers index.html
     location / {
         try_files $uri $uri/ /index.html;
