--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         command: --default-authentication-plugin=mysql_native_password
         networks:
             - appnet
-            - nginx-manager
+            - nginx-network
     phpmyadmin:
         image: phpmyadmin/phpmyadmin:latest
         restart: unless-stopped
@@ -27,7 +27,7 @@ services:
             - db
         networks:
             - appnet
-            - nginx-manager
+            - nginx-network
 
     backend:
         build:
@@ -44,7 +44,7 @@ services:
             - "3001:3000"
         networks:
             - appnet
-            - nginx-manager
+            - nginx-network
 
     frontend:
         build:
@@ -57,7 +57,7 @@ services:
             - "80"
         networks:
             - appnet
-            - nginx-manager
+            - nginx-network
 
 volumes:
     db-data:
@@ -65,5 +65,5 @@ volumes:
 networks:
     appnet:
         driver: bridge
-    nginx-manager:
+    nginx-network:
         external: true
